# getting-started

.github/workflows/: create-miru-release.yaml
cpp/: CMakeLists.txt
cue/: communication.cue  empty-mobility.cue  led.cue  led.txt  mobility-schemaless.cue  mobility.cue  motion-planning.cue  robot-features.cue  safety.cue
cue/empty-schemas/: communication.cue  planning.cue
cue/strict-schemas/: communication.cue  mobility.cue  planning.cue
jsonschema/: communication.yaml  empty.yaml  led.yaml  mobility-schemaless.yaml  mobility.yaml  motion-planning.yaml  robot-features.yaml  safety.yaml
jsonschema/empty-schemas/: communication.yaml  mobility.yaml  planning.yaml
jsonschema/strict-schemas/: communication.yaml  mobility.yaml  planning.yaml
python/: .gitignore
python/server-sdk/: README.md  requirements.txt
python/server-sdk/flask/: app.py  requirements.txt
schemas/: empty.schema.yaml  mobility-schemaless.yaml  motion-planning.yaml  robot-features.yaml
